# ralph-voice

./: .env.example  .env.op  .gitignore  CLAUDE.md  README.md  audio_loop.py  main.py  mcp_config.json  mcp_handler.py  pyproject.toml  schema.py
ui/: app.py  messages.py  styles.tcss  widgets.py
