[project]
name = "ralph-voice"
version = "0.1.0"
description = "Voice interface for Ralph MCP via Gemini Live API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "exceptiongroup>=1.2.2",
    "google-genai>=1.8.0",
    "mcp[cli]>=1.6.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.0",
    "taskgroup>=0.2.2",
]
